--- a/build
+++ b/build
@@ -1,3 +1,3 @@
 #! /bin/sh
 
-coffee --join lib/aurora-io.js --compile src/buffers/*.coffee src/containers/caf/caf-demux.coffee
+coffee --join lib/aurora-io.js --compile src/buffers/*.coffee src/containers/caf/caf-demux.coffee src/sources/http-src.coffee
